--- a/Index.html
+++ b/Index.html
@@ -172,6 +172,18 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
         <a class="pointer" onclick="applyTheme(&quot;Light&quot;); toggleId(&quot;themedrop&quot;);">Light Theme</a>
         <a class="pointer" onclick="toggleId(&quot;customtheme&quot;, &quot;themedrop&quot;)">Custom Theme</a>
       </div>
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2268527721383150"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-ef+6k-30-ac+ty"
+     data-ad-client="ca-pub-2268527721383150"
+     data-ad-slot="5364556719"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
       <div id="customtheme" class="dropdown-content">
         <a class="pointer tooldivd" onclick="toggleId(&quot;customtheme&quot;, &quot;themedrop&quot;)">back</a>
         <div class="dividerct"></div>
