--- a/Index.html
+++ b/Index.html
@@ -39,6 +39,9 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
 			updateViaCache: 'none',
 		});
     };
+	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2268527721383150"
+     crossorigin="anonymous"></script>
+
 
     // check custom functions
     document.addEventListener('keydown', key => {
@@ -63,6 +66,17 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
   </script>
   <meta name="theme-color" content="#252729"> 
 </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2268527721383150"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-ef+6k-30-ac+ty"
+     data-ad-client="ca-pub-2268527721383150"
+     data-ad-slot="5364556719"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <body id="alpha" data-new-gr-c-s-check-loaded="14.1110.0" data-gr-ext-installed="" data-new-gr-c-s-loaded="14.1110.0">
   <div class="surface">
